from url to URI.toUrl